--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,10 @@ body {
     background-image: url(https://cdn.mos.cms.futurecdn.net/G79YngbW86RJ2QtzFfZEu3.jpg);
     background-size: cover;
     background-repeat: no-repeat;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
+    font-family: 'Futura', "Trebuchet MS", Arial, sans-serif; 
+    font-style: normal; 
+    font-variant: normal; 
+    line-height: 20px; 
 }
 path {
     fill: transparent;
@@ -26,9 +29,11 @@ text {
 .container {
 
     display: flex;
-    width: 100vw;
+
     flex-direction: column;
     align-items: center;
+    max-width: 100vw;
+    max-height: 100vh;
 }
 .top {
     display: flex;
@@ -42,8 +47,8 @@ text {
 .container img {
     align-self: center;
    margin-bottom: 1.3em;
-   width: 24vw;
-   height: 32vh;
+   width: 18vw;
+   height: 22vh;
    border: 3px solid rgb(212, 212, 121);
    border-radius: 3px;
    margin: 0 1em;
@@ -54,30 +59,27 @@ text {
     padding: 0.8em 0;
 }
 #personality, #species{
-    padding: 0.8em;
-    font-weight: 700;
-    font-size: 32px;
-}
-#catchPhrase{
-    font-size: 32px;
-    align-self: center;
-    border-bottom: 3px solid rgb(212, 212, 121);
-    padding: 0 3em;
+    padding: 0.3em;
     font-weight: 500;
+    font-size: 26px;
+    margin: 0;
 }
+.pers,.spec {
+    font-weight: 300;
+}
+
 #btn {
-    padding: 1.2em 1.7em;
-    font-size: 16px;
+    padding: 0.6em 0.8em;
     background-color:rgb(238, 238, 186);
     border: 3px solid rgb(212, 212, 121);
     border-radius: 10px;
-    margin-bottom: 40em;
-    font-size: 25px;
+    margin-bottom: 20em;
+    font-size: 23px;
     font-weight: 600;
 }
 #btn:hover {
     cursor: pointer;
-    padding: 1.2em 1.7em;
+    padding: 0.7em 0.9em;
     background-color: hsl(58, 91%, 64%);
     border-color: hsl(58, 69%, 38%);
     color: rgb(56, 51, 51);
@@ -85,12 +87,19 @@ text {
     -ms-transition: background-color 0.3s linear;
     transition: background-color 0.3s linear;
 }
+#catchPhrase{
+    font-size: 32px;
+    align-self: center;
+    border-bottom: 3px solid rgb(212, 212, 121);
+    padding: 0 2em 0.5em 2em;
+    font-weight: 500;
+}
 #saying {
     Padding-bottom: 3em;
     align-self: center;
     font-size: 25px;
     font-weight: 300;
-    width: 20vw;
+    width: 17vw;
 }
 #villagerName {
     justify-self: flex-start;
@@ -118,7 +127,8 @@ box-shadow: -10px 0px 13px -7px #000000, 10px 0px 13px -7px #000000, 5px 5px 15p
   background-size: cover;
   display: flex;
   flex-direction: column; 
-  width: 30vw;
+  width: 22vw;
+  height: 60vh;
 }
 h3 {
     margin: 0;
@@ -136,10 +146,14 @@ h3 {
 .pers,.spec {
     font-size: 25px;
 }
+
+/* ----------------Media Queries ----------------- */
 @media only screen and (max-width: 600px){
+ 
     #card {
-        width: 90vw;
-      padding: 0 1em;
+        width: 80vw;
+      padding: 0 2em;
+      height: 70vh;
     }
   
   #saying {
@@ -148,14 +162,555 @@ h3 {
   }
   .container img {
     width: 70vw;
-    height: 30vh;
+    height: 90vh;
     
     
   }
   .container {
       width: 100vw;
       height: 120vh;
+      background-size: 300vw;
 
   }
+  #species,#personality {
+    padding: 0;
+    margin: 0;
+    font-size: 24px;
+    font-weight: 600;
+    width: 10vw;
+    height: 10vh;
+}
+.spec,.pers {
+    font-weight: 400;
+    font-size: 18px;
+}
   
+}
+/*
+@media only screen 
+  and (min-device-width: 320px) 
+  and (max-device-width: 480px)
+  and (-webkit-min-device-pixel-ratio: 2) {
+    .container {
+        width: 300vw;
+    }
+    #card {
+        width: 90vw;
+      padding: 0 1em;
+      height: 70vh;
+    }
+  
+  #saying {
+    width: 70vw;
+    height: 20vw;
+  }
+  .container img {
+    width: 60vw;
+    height: 15vh;
+    
+    
+  }
+  .container {
+      width: 100vw;
+      height: 120vh;
+      background-size: 300vw;
+
+  }
+  svg {
+      font-size: 40px;
+  }
+}
+*/
+/* Portrait */
+/*
+@media only screen 
+  and (min-device-width: 320px) 
+  and (max-device-width: 480px)
+  and (-webkit-min-device-pixel-ratio: 2)
+  and (orientation: portrait) {
+    #card {
+        width: 40vw;
+      padding: 0 1em;
+      height: 40vh;
+    }
+}
+*/
+/* Landscape */
+/*
+@media only screen 
+  and (min-device-width: 320px) 
+  and (max-device-width: 480px)
+  and (-webkit-min-device-pixel-ratio: 2)
+  and (orientation: landscape) {
+
+}
+*/
+/* ----------- iPhone 5, 5S, 5C and 5SE ----------- */
+
+/* Portrait and Landscape */
+/*
+@media only screen 
+  and (min-device-width: 320px) 
+  and (max-device-width: 568px)
+  and (-webkit-min-device-pixel-ratio: 2) {
+    .container {
+        width: 300vw;
+    }
+    #card {
+        width: 40vw;
+      padding: 0 1em;
+      height: 40vh;
+    }
+  
+  #saying {
+    width: 70vw;
+    height: 20vw;
+  }
+  .container img {
+    width: 60vw;
+    height: 15vh;
+    
+    
+  }
+  .container {
+      width: 100vw;
+      height: 120vh;
+      background-size: 300vw;
+
+  }
+  svg {
+      font-size: 40px;
+  }
+}
+*/
+/* Portrait */
+/*
+@media only screen 
+  and (min-device-width: 320px) 
+  and (max-device-width: 568px)
+  and (-webkit-min-device-pixel-ratio: 2)
+  and (orientation: portrait) {
+    .container {
+        width: 300vw;
+    }
+    #card {
+        width: 40vw;
+      padding: 0 1em;
+      height: 40vh;
+    }
+  
+  #saying {
+    width: 70vw;
+    height: 20vw;
+  }
+  .container img {
+    width: 60vw;
+    height: 15vh;
+    
+    
+  }
+  .container {
+      width: 100vw;
+      height: 120vh;
+      background-size: 300vw;
+
+  }
+  svg {
+      font-size: 40px;
+  }
+  #btn {
+    margin: 0;
+}
+}
+*/
+/* Landscape */ 
+/*
+@media only screen 
+  and (min-device-width: 320px) 
+  and (max-device-width: 568px)
+  and (-webkit-min-device-pixel-ratio: 2)
+  and (orientation: landscape) {
+    .container {
+        width: 300vw;
+    }
+    #card {
+        width: 90vw;
+      padding: 0 1em;
+      height: 70vh;
+    }
+  
+  #saying {
+    width: 70vw;
+    height: 20vw;
+  }
+  .container img {
+    width: 60vw;
+    height: 15vh;
+    
+    
+  }
+  .container {
+      width: 100vw;
+      height: 120vh;
+      background-size: 300vw;
+
+  }
+  svg {
+      font-size: 40px;
+  }
+
+}
+*/
+/* ----------- iPhone 6, 6S, 7 and 8 ----------- */
+
+/* Portrait and Landscape */
+/*
+@media only screen 
+  and (min-device-width: 375px) 
+  and (max-device-width: 667px) 
+  and (-webkit-min-device-pixel-ratio: 2) { 
+    .container {
+        width: 300vw;
+    }
+    #card {
+        width: 90vw;
+      padding: 0 1em;
+      height: 70vh;
+    }
+  
+  #saying {
+    width: 70vw;
+    height: 20vw;
+  }
+  .container img {
+    width: 60vw;
+    height: 15vh;
+    
+    
+  }
+  .container {
+      width: 100vw;
+      height: 120vh;
+      background-size: 300vw;
+
+  }
+  svg {
+      font-size: 40px;
+  }
+  #btn {
+    margin: 0;
+}
+}
+*/
+/* Portrait */
+/*
+@media only screen 
+  and (min-device-width: 375px) 
+  and (max-device-width: 667px) 
+  and (-webkit-min-device-pixel-ratio: 2)
+  and (orientation: portrait) { 
+
+}
+*/
+/* Landscape */
+/*
+@media only screen 
+  and (min-device-width: 375px) 
+  and (max-device-width: 667px) 
+  and (-webkit-min-device-pixel-ratio: 2)
+  and (orientation: landscape) { 
+    .container {
+        width: 300vw;
+    }
+    #card {
+        width: 90vw;
+      padding: 0 1em;
+      height: 70vh;
+    }
+  
+  #saying {
+    width: 70vw;
+    height: 20vw;
+  }
+  .container img {
+    width: 60vw;
+    height: 15vh;
+    
+    
+  }
+  .container {
+      width: 100vw;
+      height: 100vh;
+      max-width: 100%;
+
+  }
+  svg {
+      font-size: 40px;
+  }
+  #btn {
+    margin: 0;
+}
+}
+*/
+/* ----------- iPhone 6+, 7+ and 8+ ----------- */
+
+/* Portrait and Landscape */
+/*
+@media only screen 
+  and (min-device-width: 414px) 
+  and (max-device-width: 736px) 
+  and (-webkit-min-device-pixel-ratio: 3) { 
+    .container {
+        width: 300vw;
+    }
+    #card {
+        width: 90vw;
+      padding: 0 1em;
+      height: 70vh;
+    }
+  
+  #saying {
+    width: 70vw;
+    height: 20vw;
+  }
+  .container img {
+    width: 60vw;
+    height: 15vh;
+    
+    
+  }
+  .container {
+      width: 100vw;
+      height: 120vh;
+      background-size: 300vw;
+
+  }
+  .curve {
+    font-size: 80px;
+}
+#btn {
+    margin: 0;
+}
+}
+*/
+/* Portrait */
+/*
+@media only screen 
+  and (min-device-width: 414px) 
+  and (max-device-width: 736px) 
+  and (-webkit-min-device-pixel-ratio: 3)
+  and (orientation: portrait) { 
+    .container {
+        width: 300vw;
+    }
+    #card {
+        width: 90vw;
+      padding: 0 1em;
+      height: 70vh;
+    }
+  
+  #saying {
+    width: 70vw;
+    height: 20vw;
+  }
+  .container img {
+    width: 60vw;
+    height: 15vh;
+    
+    
+  }
+  .container {
+      width: 100vw;
+      height: 120vh;
+      background-size: 300vw;
+
+  }
+  .curve {
+    font-size: 80px;
+}
+#btn {
+    margin: 0;
+}
+}
+*/
+/* Landscape */
+/*
+@media only screen 
+  and (min-device-width: 414px) 
+  and (max-device-width: 736px) 
+  and (-webkit-min-device-pixel-ratio: 3)
+  and (orientation: landscape) { 
+    .container {
+        width: 300vw;
+    }
+    #card {
+        width: 90vw;
+      padding: 0 1em;
+      height: 70vh;
+    }
+  
+  #saying {
+    width: 70vw;
+    height: 20vw;
+  }
+  .container img {
+    width: 60vw;
+    height: 15vh;
+    
+    
+  }
+  .container {
+      width: 100vw;
+      height: 120vh;
+      background-size: 300vw;
+
+  }
+  .curve {
+    font-size: 80px;
+}
+#btn {
+    margin: 0;
+}
+}
+*/
+/* ----------- iPhone X ----------- */
+
+/* Portrait and Landscape */
+@media only screen 
+  and (min-device-width: 375px) 
+  and (max-device-width: 812px) 
+  and (-webkit-min-device-pixel-ratio: 3) { 
+
+    #card {
+        width: 92vw;
+      height: 60vh;
+    }
+  
+  #saying {
+    width: 60vw;
+    height: 10vw;
+  }
+  .container img {
+    width: 60vw;
+    height: 15vh;
+    
+  }
+  #btn {
+      margin: 0;
+  }
+  .container {
+      width: 100vw;
+      height: 120vh;
+      background-size: 300vw;
+
+  }
+  .curve {
+    font-size: 80px;
+}
+#species,#personality {
+    padding: 0;
+    margin: 0;
+    font-size: 24px;
+    font-weight: 600;
+    width: 10vw;
+    height: 10vh;
+}
+.spec,.pers {
+    font-weight: 400;
+    font-size: 18px;
+}
+}
+
+/* Portrait */
+@media only screen 
+  and (min-device-width: 375px) 
+  and (max-device-width: 812px) 
+  and (-webkit-min-device-pixel-ratio: 3)
+  and (orientation: portrait) { 
+    .container {
+        width: 300vw;
+    }
+    #card {
+        width: 90vw;
+      padding: 0 1em;
+      height: 70vh;
+    }
+  
+  #saying {
+    width: 70vw;
+    height: 20vw;
+  }
+  .container img {
+    width: 60vw;
+    height: 15vh;
+    
+    
+  }
+  .container {
+      width: 100vw;
+      height: 120vh;
+      background-size: 300vw;
+
+  }
+  #species,#personality {
+    padding: 0;
+    margin: 0;
+    font-size: 24px;
+    font-weight: 600;
+    width: 10vw;
+    height: 10vh;
+}
+.spec,.pers {
+    font-weight: 400;
+    font-size: 18px;
+}
+}
+
+/* Landscape */
+@media only screen 
+  and (min-device-width: 375px) 
+  and (max-device-width: 812px) 
+  and (-webkit-min-device-pixel-ratio: 3)
+  and (orientation: landscape) { 
+    .container {
+        width: 300vw;
+        height: 100vh;
+    }
+    #card {
+        width: 90vw;
+      padding: 0 1em;
+      height: 70vh;
+    }
+  
+  #saying {
+    width: 70vw;
+    height: 20vw;
+  }
+  .container img {
+    width: 60vw;
+    height: 15vh;
+    
+    
+  }
+  .container {
+      width: 100vw;
+      height: 120vh;
+      background-size: 300vw;
+
+  }
+#btn {
+    margin: 0;
+}
+#species,#personality {
+    padding: 0;
+    margin: 0;
+    font-size: 24px;
+    font-weight: 600;
+    width: 10vw;
+    height: 10vh;
+}
+.spec,.pers {
+    font-weight: 400;
+    font-size: 18px;
+}
 }
